frontend/src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #181818;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#root {
  background-color: #242424;
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  padding: 0 4rem;
  min-height: 100vh;
}

@media screen and (min-width: 600px) {
  #root {
    padding: 0 3%;
  }
}

@media screen and (min-width: 1000px) {
  #root {
    padding: 0 10%;
  }
}

@media screen and (min-width: 1264px) {
  #root {
    filter: drop-shadow(0px 5px 32px rgb(0, 0, 0, 0.4));
    max-width: 1000px;
    padding: 0 8rem;
    width: 100%;
  }
}

@media screen and (max-width: 600px) {
  #root {
    padding: 0rem 1rem;
  }
}

a, span.link {
  color: rgba(255, 255, 255, 0.87);
  font-weight: 500;
  text-decoration: inherit;
}

a:hover {
  color: white;
}

a.underline {
  text-decoration: underline dotted;
}

body {
  margin: 0;
  min-height: 100vh;
  overflow-x: hidden;

  /* Prevent content shifting when scrollbar appears */
  padding-left: calc((100vw - 100%) / 2);
  padding-right: calc((100vw - 100%) / 2);
}

/* Mobile-only */
@media screen and (max-width: 1263px) {
  body {
    padding: 0;
  }
}

canvas {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}

@media screen and (max-width: 1263px) {
  canvas {
    display: none;
  }
}

h1 {
  font-size: 2rem;
  line-height: 2.5rem;
  margin: 0;
  padding-bottom: 1rem;
}

@media screen and (max-width: 600px) {
  h1 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

h2 {
  margin: 0;
}

img.round {
  border-radius: 50%;
}

main {
  flex-grow: 1;
}

p {
  font-size: 1.125rem;
}

p.small {
  font-size: 0.875rem;
  margin-bottom: 0.5rem;
}

.light-dark-toggle {
  color: red;
  display: flex;
  justify-content: flex-end;
  flex-basis: 25%;
}

@media screen and (max-width: 1000px) {
  .light-dark-toggle {
    display: none;
  }
}

.mt-1 {
  margin-top: 1rem;
}
/* 
@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
} */

